--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -1,11 +1,17 @@
-$red-strong: #4c0210;
-$red-light: #8f0f1e;
+$red-strong: #591919;
+$red-light: #8c2323;
+$red-light-2: #732222;
 $red-custom: #a54131;
+$red-extra-light: #bf8e8e;
+$white: #f2f2f2;
 $black: #090d0f;
 $gray: #565656;
 $blue-dark: #141825;
 $green-dark: #004d40;
 $yellow: #ffc107;
+$orange: #f57c00;
+$blue: #01579b;
+$purple: #4527a0;
 
 body {
   margin: 0;
