--- a/src/Register/register.scss
+++ b/src/Register/register.scss
@@ -32,3 +32,24 @@
 a {
   text-decoration: none !important;
 }
+
+.recoverContainer {
+  padding: 5rem 3rem;
+  background: #f5f5f5;
+  height: 100vh;
+}
+
+@media only screen and (max-width: 1536px) and (min-width: 767px) {
+  .recoverContainer {
+    padding: 5rem 20rem !important;
+    form {
+      width: 80% !important;
+      button {
+        width: 50%;
+      }
+    }
+  }
+  .registerContainer {
+    padding: 5rem 15rem !important;
+  }
+}
