--- a/src/ServiceDetails/details.scss
+++ b/src/ServiceDetails/details.scss
@@ -13,6 +13,15 @@
   border-radius: 20px !important;
   padding: 1rem !important;
   width: 100% !important;
+  &.floatLeft {
+    width: 10% !important;
+    position: absolute;
+    right: 20px;
+    top: 23%;
+  }
+  &.half2 {
+    width: 45% !important;
+  }
 }
 .sdMainContainer {
   padding: 2rem;
@@ -54,6 +63,31 @@
   font-size: 1rem !important;
   a {
     color: white !important;
+  }
+}
+
+.docBtn {
+  margin-top: 1rem;
+  button {
+    background: $blue;
+    border-radius: 10px;
+    text-transform: inherit !important;
+    padding: 0.8rem 1.5rem !important;
+  }
+}
+
+.btnRouting {
+  border-radius: 50% !important;
+  height: 5rem !important;
+  width: 5rem !important;
+  position: fixed !important;
+  top: 35px;
+  left: 75%;
+  z-index: 999 !important;
+  background-color: $blue-map !important;
+  a {
+    color: #fff !important;
+    font-weight: bold !important;
   }
 }
 
