--- a/src/ServiceDetails/details.scss
+++ b/src/ServiceDetails/details.scss
@@ -115,6 +115,13 @@
   }
 }
 
+.docLabelUploaded {
+  text-align: center;
+  margin: 2rem 0 0 0;
+  font-style: italic;
+  text-decoration: underline;
+}
+
 @media only screen and (max-width: 1536px) and (min-width: 767px) {
   .sdMainContainer {
     padding: 2rem 15rem;
