update to latest manu items

--- a/src/Menu/menu.scss
+++ b/src/Menu/menu.scss
@@ -17,6 +17,10 @@
     color: #fff;
     font-family: 'Montserrat', sans-serif !important;
   }
+
+  &.callBtn {
+    text-transform: initial !important;
+  }
 }
 
 .redNotification {
